# bindings

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: export.cmake  hide.cmake  module.cmake
include/saucer/: app.h  desktop.h  icon.h  memory.h  navigation.h  options.h  permission.h  preferences.h  scheme.h  script.h  stash.h  url.h  webview.h  window.h
modules/desktop/: CMakeLists.txt
modules/desktop/include/saucer/: desktop.h
modules/desktop/src/: desktop.cpp
modules/loop/: CMakeLists.txt
modules/loop/include/saucer/: loop.h
modules/loop/src/: loop.cpp
modules/pdf/: CMakeLists.txt
modules/pdf/include/saucer/: pdf.h
modules/pdf/src/: pdf.cpp
private/: app.hpp  app.impl.hpp  icon.hpp  icon.impl.hpp  native.hpp  navigation.hpp  navigation.impl.hpp  options.hpp  permission.impl.hpp  preferences.hpp  scheme.hpp  scheme.impl.hpp  script.hpp  stash.hpp  stash.impl.hpp  url.impl.hpp  utils.hpp  utils.inl  webview.hpp  webview.impl.hpp  window.impl.hpp
private/utils/: convert.hpp  convert.inl  extract.hpp  extract.inl  map.hpp  map.inl  opaque.hpp  opaque.inl  range.hpp  range.inl  string.hpp  traits.hpp  traits.inl  wide.hpp  wide.inl  wrap.hpp
src/: app.cpp  desktop.cpp  icon.cpp  main.cpp  native.cpp  navigation.cpp  options.cpp  permission.cpp  preferences.cpp  scheme.cpp  script.cpp  stash.cpp  string.cpp  url.cpp  webview.cpp  window.cpp
template/: version.hpp.in
